[FIX] sap.m.Label: Asterisk is displayed properly
When sap.m.Label was used in a form and was truncated required asterisk was not displayed in zh-CN language

BCP: 2270016372

--- a/src/sap.m/src/sap/m/themes/base/Label.less
+++ b/src/sap.m/src/sap/m/themes/base/Label.less
@@ -180,6 +180,9 @@ td.sapUiFormElementLbl:not(.sapUiGridLabelFull) > .sapMLabel{
 			&:lang(zh-TW) {
 				padding-right: 1.59em;
 			}
+			&:lang(zh-CN) {
+				padding-right: 1.59em;
+			}
 
 			.sapMLabelColonAndRequired {
 				position: absolute;
